test/sema/generics/generic_function_inference_multiple_params_error.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
struct S<T> { x: T }

fn wrapper<T, U>(x: T, y: T, z: U): unit {}

fn main(): unit {
  wrapper(S{ x: 1 }, S{ x: S{ x: 1 } }, main);
  // CHECK: [[# @LINE - 1 ]]:23: error: cannot unify 'S<number>' with 'number'
  // CHECK: [[# @LINE - 2 ]]:23: error: cannot unify 'S<S<number>>' with 'S<number>'
}

// CHECK-NOT: {{.*error.*}}
